--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         
         <a href="#about" class="viewmore">
             ABOUT US
-            <img class="more-arrow" src="/icon/more-arrow.png" alt="more">
+            <img class="more-arrow" src="/icon/arrow.png" alt="more">
         </a>
         <div id="about" class="content">
             <img class="logo" src="icon/logo.png" alt="logo">
@@ -64,7 +64,7 @@
 
         <a href="#members" class="viewmore">
             MEET THE MEMBERS
-            <img class="more-arrow" src="/icon/more-arrow.png" alt="more">
+            <img class="more-arrow" src="/icon/arrow.png" alt="more">
         </a>
         <div id="members" class="content">
             <div class="profile-container">
@@ -231,7 +231,10 @@
 
         
 
-        <a href="#qna" class="viewmore">Q&A</a>
+        <a href="#qna" class="viewmore">
+            Q&A
+            <img class="more-arrow" src="/icon/arrow.png" alt="more">
+        </a>
         <div id="qna" class="content">
             <div class="question1">
                 <h1>Frequently Asked Questions</h1>
